Fixed the social footer icon a text spill over

--- a/style.css
+++ b/style.css
@@ -2120,7 +2120,7 @@ ul.videos li a:hover { }
 width: 2em;
 margin-left: 22px;
 margin-top: 28px;
-letter-spacing: 3px;
+letter-spacing: 4px;
 color:#fff;
 
 }
